Resolved layout issues

--- a/assets/css/carousel.css
+++ b/assets/css/carousel.css
@@ -3,9 +3,9 @@
 /* Padding below the footer and lighter body text */
 
 body {
-    padding-top: 6.5rem;
-    padding-bottom: 3rem;
-    color: rgb(var(--bs-tertiary-color-rgb));
+    /* padding-top: 6.5rem; */
+    /* padding-bottom: 3rem; */
+    /* color: rgb(var(--bs-tertiary-color-rgb)); */
   }
   
   
